# catalogue-biencoder

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
docs/: COLAB_GUIDE.md  TECH_DESIGN.md
docs/images/: diagrams.excalidraw
notebooks/: COLAB_GUIDE.md
scripts/: export.py  prep_web_data.py  train.py
src/catalogue_biencoder/: __init__.py  config.py  data.py  exports.py  losses.py  modeling.py  utils.py
src/catalogue_biencoder/training/: __init__.py  runner.py  stages.py
web-app/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
web-app/app/: globals.css  layout.tsx  page.tsx
web-app/components/scene/: CameraControls.tsx  GravityLines.tsx  PickingLayer.tsx  PointCloud.tsx  Scene3D.tsx  Stars.tsx
web-app/components/ui/: ControlPanel.tsx  SearchBar.tsx  Sidebar.tsx  Tooltip.tsx
